# terminal-notificator

./: Cargo.toml  README.md  RELEASE.md  verify.sh
Formula/: terminal-notificator.rb
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/mvp_core_notification/: metadata.json  plan.md  spec.md
conductor/code_styleguides/: general.md
conductor/tracks/distribution_homebrew_support/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/mvp_core_notification/: index.md  plan.md
src/: cli.rs  context.rs  main.rs  notifier.rs  verify_focus.rs
